--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ dependencies {
 
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    //implementation 'androidx.appcompat.app.AppCompatActivity'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
@@ -41,6 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.naver.maps:map-sdk:3.12.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 
 }
